[package]
name = "em_filter"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for building Emergence network agents"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
scraper = "0.19"
regex = "1"
tracing = "0.1"
thiserror = "1"
futures-util = "0.3"

[dev-dependencies]
tracing-subscriber = "0.3"
