[package]
name         = "em_filter"
version      = "0.2.1"
edition      = "2021"
description  = "Rust SDK for building Emergence network agents — connect to em_disco, handle queries, return results."
license-file = "LICENSE"
readme       = "README.md"
repository   = "https://github.com/EmergenceSystem/em_filter_rs"
homepage     = "https://github.com/EmergenceSystem/em_filter_rs"
keywords     = ["emergence", "distributed", "agent", "websocket", "search"]
categories   = ["network-programming", "web-programming::websocket", "asynchronous"]

[dependencies]
tokio            = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
async-trait      = "0.1"
scraper          = "0.26"
regex            = "1"
tracing          = "0.1"
thiserror        = "2"
futures-util     = "0.3"

[dev-dependencies]
tracing-subscriber = "0.3"
serial_test        = "1"
